--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ nav:
         - 数据结构与算法: cs/数据结构与算法.md
     - 收藏:
         - 简悦: collect/目录.md
-        - 精品嵌入式资源汇总: collect/01_精品嵌入式资源汇总.md
+        - 精品嵌入式资源汇总: collect/精品嵌入式资源汇总.md
     - 阅读:
         - Reading: read/Reading.md
         - Books: read/Books.md
